Fix: Menu gap too large in tablet.

--- a/app/layout/menu/menu.module.scss
+++ b/app/layout/menu/menu.module.scss
@@ -59,6 +59,7 @@
   @media (max-width: 1024px) {
     --menu-height: 75%;
     --menu-width: 70%;
+    --menu-gap: 5vh;
 
     --offerings-text-size: 2.5rem;
     --about-text-size: 2rem;
